--- a/src/styles/Guest.css
+++ b/src/styles/Guest.css
@@ -53,6 +53,9 @@ h1 {
   max-height: 10.5em; /* Limit to 7 lines (approx.) */
   overflow: hidden; /* Hide overflow */
   margin-top: 2rem;
+  position: absolute;
+  width: 50%;
+  text-align: center;
 }
 
 .image-section {
