--- a/src/styles/CampusLast.css
+++ b/src/styles/CampusLast.css
@@ -132,8 +132,8 @@
   }
   
   .vertical-para {
-    padding:0;
-    font-size: 1.5rem;
+    padding-top:200px;
+    font-size: 1.3rem;
     color: black;
     font-weight: 500;
     text-align: left;
@@ -143,7 +143,7 @@
 .vertical-box-separator {
   width: 2px;
   background-color: #000;
-  height:80vh;
+  height:70vh;
 }
 
 
