--- a/src/styles/WelcomePage.css
+++ b/src/styles/WelcomePage.css
@@ -57,7 +57,7 @@
   margin-top: 50px;
 }
 
-.bold-text-with-images p {
+.bold-text-with-images span {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -180,11 +180,25 @@ html {
 @media (max-width: 576px) {
   .welcome-to,
   .challenge-heading {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   .bold-text-with-images {
     font-size: 1.5rem;
+    
+  }
+
+  .bold-text-with-images span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px; /* Adds some spacing between lines */
+    font-size: 1.7rem;
+  }
+
+  .image-container {
+    display: inline-block;
+    margin: 2px 0px; /* Adds spacing between text and images */
   }
 
   .welcome-description {
@@ -193,6 +207,7 @@ html {
 
   .image1 img {
     width: 100px;
+    height: 50px;
   }
 
   .image2 img,
