--- a/src/styles/CampusLast.css
+++ b/src/styles/CampusLast.css
@@ -162,6 +162,17 @@
     font-size: 30px;
     padding: 30px;
   }
+
+  .CampusLast-icon{
+    height:60px;
+    width:60px;
+    margin:20px;
+    margin-left:0;
+    opacity:90%;
+  }
+
+
+
 }
 
 /* Responsive Design */
