--- a/src/styles/WelcomePage.css
+++ b/src/styles/WelcomePage.css
@@ -110,6 +110,7 @@ html {
   .welcome-to,
   .challenge-heading {
     font-size: 3rem;
+    padding: 0%;
   }
 
   .bold-text-with-images {
@@ -121,6 +122,7 @@ html {
   .welcome-to,
   .challenge-heading {
     font-size: 2.5rem;
+    padding: 0%;
   }
 
   .bold-text-with-images {
@@ -130,6 +132,7 @@ html {
   .welcome-description {
     font-size: 0.9rem;
     margin-bottom: 20px;
+    padding: 0%;
   }
 
   .image1 img {
@@ -151,6 +154,7 @@ html {
   .welcome-to,
   .challenge-heading {
     font-size: 2rem;
+    padding: 0%;
   }
 
   .bold-text-with-images {
@@ -159,6 +163,7 @@ html {
 
   .welcome-description {
     font-size: 0.8rem;
+    padding: 0%;
   }
 
   .image1 img {
@@ -181,6 +186,7 @@ html {
   .welcome-to,
   .challenge-heading {
     font-size: 2rem;
+    padding: 0% ;
   }
 
   .bold-text-with-images {
@@ -203,6 +209,7 @@ html {
 
   .welcome-description {
     font-size: 0.7rem;
+    padding: 0%;
   }
 
   .image1 img {
