--- a/src/styles/Patron.css
+++ b/src/styles/Patron.css
@@ -5,8 +5,10 @@
   margin: 10vh 0;
 }
 .header h1 {
+  font-size: 3rem;
   font-weight: 400;
   padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .content {
   width: 100vw !important;
