--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 /* Footer Base Styles */
 .footer {
-  background-color: #EAE9FF;
+  background-color: #eae9ff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,7 +40,7 @@
   left: 0;
   bottom: 0;
   width: 0;
-  background-color: #770FB3;
+  background-color: #770fb3;
   transition: width 0.3s ease;
 }
 
@@ -82,7 +82,7 @@
 
 /* Social Media or External Links */
 a {
-  color: #770FB3;
+  color: #770fb3;
   font-size: 2.5rem;
   margin: 1rem;
   transition: all 0.2s ease-in-out;
@@ -90,7 +90,7 @@ a {
 
 a:hover {
   transform: translateY(-5px);
-  color: #827DFF;
+  color: #827dff;
 }
 
 /* Responsive Styles for Tablets and Smaller Screens */
@@ -144,8 +144,8 @@ a:hover {
   }
 
   .content img {
-    width: 40vw;
-    height: 15vh;
+    width: 25vw;
+    height: 10vh;
   }
 
   .copyright p {
@@ -154,6 +154,9 @@ a:hover {
 
   a {
     font-size: 2rem;
+  }
+  .footer-icons a {
+    font-size: 1.5rem;
   }
 
   .footer-body {
