--- a/src/styles/Loading.css
+++ b/src/styles/Loading.css
@@ -20,7 +20,8 @@
 }
 
 @keyframes blink-caret {
-  from, to {
+  from,
+  to {
     border-color: transparent;
   }
   50% {
@@ -30,7 +31,7 @@
 
 .typing-animation {
   font-size: 3rem;
-  font-weight: 600; 
+  font-weight: 600;
   white-space: nowrap;
   overflow: hidden;
   width: 0;
@@ -55,4 +56,20 @@
   height: auto;
   opacity: 0;
   animation: fadeInGrow 1s forwards ease-in-out;
+}
+
+@media (max-width: 500px) {
+  .typing-animation {
+    font-size: 1rem;
+  }
+  @keyframes fadeInGrow {
+    0% {
+      opacity: 0;
+      transform: scale(0);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1.2);
+    }
+  }
 }
