--- a/src/styles/CampusLast.css
+++ b/src/styles/CampusLast.css
@@ -88,25 +88,26 @@
   margin: 0 auto;
   margin-bottom: 40px; /* Space between the columns and the footer */
   /* background-color: #FCEFF8; */
-  padding: 20px;
-  margin-left: 300px;
+ 
+  margin-left: 320px;
 }
 
 .vertical-box {
   flex: 1;
   padding: 20px;
+  /* background-color: brown; */
   text-align: center;
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; /* Align content to the start */
+  justify-content:center; /* Align content to the start */
   height: 500px; /* Set a max height for each box */
 }
 
 .vertical-box-number {
   font-size: 6rem;
   color: black;
-  margin: 10px; /* Small space below the number */
+  margin-bottom: 10px; /* Small space below the number */
   text-align: left;
   font-weight: 600;
   height: 120px;
@@ -205,11 +206,13 @@
     font-size: 1.5rem;
     margin: 0%;
     padding: 0%;
+    text-align: center;
   }
 
   .vertical-para {
     padding-top: 70px;
     font-size: 1rem;
+    text-align: center;
   }
 
   .vertical-box-separator {
