--- a/src/styles/Guest.css
+++ b/src/styles/Guest.css
@@ -27,6 +27,37 @@ h1 {
   opacity: 0; /* Start hidden */
   animation: fadeIn 0.5s forwards; /* Animation for fade-in */
   padding: 20px;
+  position: relative; /* Required for absolute positioning of the overlay */
+  background: rgba(255, 255, 255, 0.2); /* Light background for the glass effect */
+  backdrop-filter: blur(10px); /* Apply blur for the glassmorphism */
+  border-radius: 12px; /* Rounded corners */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  transition: transform 0.3s ease; /* Smooth scale transition */
+}
+
+.guest-section:hover{
+  transform: scale(1.05);
+}
+
+.coming-soon-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 1); /* Semi-transparent background for overlay */
+  color: #333;
+  font-size: 2rem;
+  font-weight: bold;
+  opacity: 1; /* Initially hidden */
+  transition: opacity 0.3s ease; /* Fade in effect */
+}
+
+.guest-section:hover .coming-soon-overlay {
+  opacity: 1; /* Show on hover */
 }
 
 .info-section {
