--- a/src/styles/CampusLast.css
+++ b/src/styles/CampusLast.css
@@ -187,7 +187,8 @@
     width: 100%;
     height: 300px;
     padding: 20px;
-    margin-bottom: 20px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
     border-bottom: 2px solid black;
     background-color: #fceff8;
   }
@@ -234,7 +235,8 @@
   display: flex;
   justify-content: center; 
   align-items: center; 
-  height: 20vh; 
+  height: 3vh; 
+  margin: 20px;
 }
 
 .CampusLast-black-button {
