--- a/src/styles/Sponser.css
+++ b/src/styles/Sponser.css
@@ -50,7 +50,7 @@ h1 {
   justify-content: center;
   align-items: center;
 }
-.carousel-card img{
+.carousel-card img {
   width: 80%;
   height: 60%;
   border-radius: 10px;
@@ -100,6 +100,11 @@ h1 {
 @media (max-width: 500px) {
   .carousel-card {
     height: 45vh;
+    width: 40vw;
+  }
+  .carousel-card img {
+    width: 60%;
+    height: 50%;
   }
   .carousel-card h1 {
     font-size: 2rem;
