--- a/src/styles/CampusLast.css
+++ b/src/styles/CampusLast.css
@@ -87,6 +87,8 @@
   max-width: 1000px;
   margin: 0 auto;
   padding: 20px;
+  height: 500px; /* Set a consistent height for each box */
+
 }
 
 .vertical-box {
@@ -97,36 +99,38 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; /* Align items to the top */
+  justify-content: space-between; /* Distribute content evenly */
   height: 500px; /* Set a consistent height for each box */
   max-width: 300px;
   margin: 0 10px; /* Space between boxes */
+ 
 }
 
 .vertical-box-number {
   font-size: 6rem;
   color: black;
-  margin-bottom: 100px;
+  margin-bottom: 10px;
   font-weight: 600;
   height: 120px;
-  text-align: left;
+  text-align: center;
   line-height: 120px; /* Ensure the number is vertically centered */
 }
 
 .vertical-box-heading {
   font-size: 1.1rem;
   color: black;
-  text-align: left;
-  margin-top: 20px; /* Add space below the number */
+  text-align: center;
+  margin-bottom: auto; /* Ensure this aligns just under the number */
+  padding-bottom: 20px; /* Optional: Space between heading and paragraph */
 }
 
 .vertical-para {
-  margin-top: 10px;
+  margin-top: auto; /* Align paragraphs at the bottom */
+  padding-top: 20px; /* Ensure some space between the heading and paragraph */
   font-size: 1.3rem;
   color: black;
   font-weight: 500;
   text-align: left;
-  flex-grow: 1; /* Fill remaining space to push content evenly */
 }
 
 /* Separator between the columns */
@@ -135,25 +139,6 @@
   background-color: #000;
   height: 70vh;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
