--- a/src/styles/CampusLast.css
+++ b/src/styles/CampusLast.css
@@ -137,6 +137,30 @@
   height: 70vh;
 }
 
+.CampusLast-button-container {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  height: 20vh; 
+}
+
+.CampusLast-black-button {
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 15px 30px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+/* .CampusLast-black-button:hover {
+  background-color: #333; 
+} */
+
+
+
 
 
 /* Styles for mobile and tablets (hover effects disabled, smaller image size) */
@@ -190,9 +214,10 @@
 
   .vertical-box {
     width: 100%;
-    height: 300px;
+    height: 00px;
     padding: 20px;
-    margin-bottom: 20px;
+    margin: 20px;
+    margin-bottom: 0px;
     border-bottom: 2px solid black;
     background-color: #fceff8;
   }
@@ -235,24 +260,3 @@
 }
 
 
-.CampusLast-button-container {
-  display: flex;
-  justify-content: center; 
-  align-items: center; 
-  height: 20vh; 
-}
-
-.CampusLast-black-button {
-  background-color: black;
-  color: white;
-  border: none;
-  padding: 15px 30px;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-/* .CampusLast-black-button:hover {
-  background-color: #333; 
-} */
